Ability to run zne on ER-created circuit. Still basic swap functionality.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ mitiq = "^0.40.0"
 jupyter = "^1.1.1"
 matplotlib = "^3.9.2"
 pylatexenc = "^2.10"
+ply = "^3.11"
 
 [build-system]
 requires = ["poetry-core"]
