--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ matplotlib = "^3.9.2"
 pylatexenc = "^2.10"
 ply = "^3.11"
 qiskit-aer = "^0.15.1"
+pytest = "^8.3.3"
 
 [build-system]
 requires = ["poetry-core"]
