--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pylatexenc = "^2.10"
 ply = "^3.11"
 qiskit-aer = "^0.15.1"
 pytest = "^8.3.3"
+scikit-learn = "^1.5.2"
 
 [build-system]
 requires = ["poetry-core"]
