--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,13 @@ matplotlib = "^3.9.2"
 pylatexenc = "^2.10"
 ply = "^3.11"
 qiskit-aer = "^0.15.1"
-pytest = "^8.3.3"
 scikit-learn = "^1.5.2"
+pre-commit = "^4.0.1"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.3"
+ruff = "^0.8.0"
+
 
 [build-system]
 requires = ["poetry-core"]
