--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ pre-commit = "^4.0.1"
 pytest = "^8.3.3"
 ruff = "^0.8.0"
 
+[tool.ruff]
+line-length = 120
 
 [build-system]
 requires = ["poetry-core"]
