Renaming. Notebook shortcuts now work. Other small and misc. refactors.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ ply = "^3.11"
 qiskit-aer = "^0.15.1"
 scikit-learn = "^1.5.2"
 pre-commit = "^4.0.1"
+notebook = "7.0.8"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
